# TestTaskBazalt

./: .clang-format  CMakeLists.txt  README.md  build.sh
alt-pack/: CMakeLists.txt  build.sh
alt-pack/private/: pack.cpp  version.cpp  version.hpp
alt-pack/public/: pack.hpp
cli/: CMakeLists.txt  main.cpp
